# prometheus-ws-proxy-client

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  example.config.json  readme.md  test.json
.github/workflows/: release.yml
docker/: Dockerfile
src/: config.rs  main.rs  tests.rs  utils.rs  worker.rs  ws_request.rs  ws_response.rs
