[package]
name = "proxy-client"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
names = { version = "0.14", default-features = false }
rand = "0.8"
log = "0.4"
env_logger = "0.10.0"
websocket = "0.26"

[dev-dependencies]
mockito = "0.31"
