[package]
name = "proxy-client"
version = "2.2.8"
edition = "2021"

[profile.release]
debug = true

[dependencies]
proc-macro2 = { version = "1.0.66", features = ["default", "proc-macro"] }
clap = { version = "4.0.30", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
names = { version = "0.14", default-features = false }
rand = "0.8"
log = "0.4"
env_logger = "0.10.0"
websocket = "0.26"
futures = "0.3.26"
futures-util = "0.3.26"
futures-channel = "0.3.26"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "*"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.64"
sentry = "0.29.3"

[dev-dependencies]
mockito = "0.32.3"
