[package]
name = "proxy-client"
version = "2.2.8"
edition = "2021"

[profile.release]
debug = true

[dependencies]
proc-macro2 = { version = "=1.0.79", features = ["default", "proc-macro"] }
clap = { version = "^4.5", features = ["derive"] }
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
reqwest = { version = "^0.12", features = ["blocking", "json"] }
names = { version = "^0.14", default-features = false }
rand = "^0.8"
log = "^0.4"
env_logger = "^0.11"
websocket = "^0.27"
futures = "^0.3"
futures-util = "^0.3"
futures-channel = "^0.3"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "*"
tokio = { version = "^1.36", features = ["full"] }
async-trait = "^0.1"
sentry = "^0.32"

[dev-dependencies]
mockito = "^1.4"
